--- a/ionic-tagr/www/templates/map.html
+++ b/ionic-tagr/www/templates/map.html
@@ -1,5 +1,12 @@
-<ion-view>
-  <ion-content>
-      <div id="map" data-tap-disabled="true"></div>
-  </ion-content>
-</ion-view>
+<ion-navbar *navbar>
+  <ion-title>
+    Map
+  </ion-title>
+  <ion-buttons end>
+    <button (click)="addMarker()"><ion-icon name="add"></ion-icon>Add Marker</button>
+  </ion-buttons>
+</ion-navbar>
+
+<ion-content>
+  <div id="map"></div>
+</ion-content>
